init webapp index.html

--- a/mbp-webapp/src/index.html
+++ b/mbp-webapp/src/index.html
@@ -1,13 +1,96 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>MbpWebapp</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- Favicon -->
+  <link href="assets/img/favicon.ico" rel="shortcut icon" />
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css?family=Poppins:400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+
+  <!-- Stylesheets -->
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="assets/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="assets/css/magnific-popup.css" />
+  <link rel="stylesheet" href="assets/css/owl.carousel.min.css" />
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="assets/css/animate.css" />
 </head>
+
 <body>
-  <app-root></app-root>
+  <!-- Page Preloder -->
+  <div id="preloder">
+    <div class="loader"></div>
+  </div>
+
+  <!-- Header section -->
+  <header class="header-section">
+    <div class="container">
+      <a href="index.html" class="site-logo">
+        <img src="assets/img/logo.png" alt="logo">
+      </a>
+      <!-- Switch button -->
+      <div class="nav-switch">
+        <div class="ns-bar"></div>
+      </div>
+      <div class="header-right">
+        <ul class="main-menu">
+          <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="about.html">About us</a></li>
+          <li><a href="service.html">Services</a></li>
+          <li><a href="blog.html">News</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <div class="header-btns">
+          <a href="#" class="site-btn sb-c1">Support <span>24/7</span></a>
+          <a href="#" class="site-btn sb-c2">Login</a>
+          <a href="#" class="site-btn sb-c3">Register</a>
+        </div>
+      </div>
+    </div>
+  </header>
+  <!-- Header section end -->
+
+
+  <!-- Hero section -->
+  <section class="hero-section">
+    <div class="hero-slider owl-carousel">
+      <div class="hs-item set-bg" data-setbg="assets/img/bg.jpg">
+        <div class="container">
+          <h2>The Best Hosting</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem maximus mauris sceleri sque,
+          </p>
+          <p>at rutrum nulla dictum. Ut ac ligula sapien. Suspendisse cursus faucibus finibus.</p>
+          <div class="clearfix"></div>
+          <a href="" class="site-btn sb-c1">Read More</a>
+        </div>
+      </div>
+      <div class="hs-item set-bg" data-setbg="assets/img/bg.jpg">
+        <div class="container">
+          <h2>The Best Hosting</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem maximus mauris sceleri sque,
+          </p>
+          <p>at rutrum nulla dictum. Ut ac ligula sapien. Suspendisse cursus faucibus finibus.</p>
+          <div class="clearfix"></div>
+          <a href="" class="site-btn sb-c1">Read More</a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- Hero section end -->
+
+
+  <!--====== Javascripts & Jquery ======-->
+  <script src="assets/js/jquery-3.2.1.min.js"></script>
+  <script src="assets/js/bootstrap.min.js"></script>
+  <script src="assets/js/owl.carousel.min.js"></script>
+  <script src="assets/js/jquery.magnific-popup.min.js"></script>
+  <script src="assets/js/circle-progress.min.js"></script>
+  <script src="assets/js/main.js"></script>
 </body>
+
 </html>
