Ajout du module contenant le formulaire de création d'annonce avec les requêtes ajax

--- a/mbp-webapp/src/index.html
+++ b/mbp-webapp/src/index.html
@@ -11,6 +11,8 @@
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <!-- Google library -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
@@ -19,6 +21,7 @@
   <link rel="stylesheet" href="assets/css/owl.carousel.min.css" />
   <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="stylesheet" href="assets/css/animate.css" />
+
 </head>
 
 <body>
