--- a/mbp-webapp/src/index.html
+++ b/mbp-webapp/src/index.html
@@ -5,7 +5,7 @@
   <title>MbpWebapp</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/img/logos/mpb_logo_rouge.png">
   <link ref="style.css" rel="stylesheet">
 </head>
 <body>
