--- a/mbp-webapp/src/index.html
+++ b/mbp-webapp/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/img/logos/mpb_logo_rouge.png">
-  <link ref="style.css" rel="stylesheet">
+  <link href="assets/css/mbp_style.css" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
